:building_construction: files architectur

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
+    <link rel="stylesheet" href="styles/css/style.css">
 </head>
 <body>
+    <nav>
+        <a href="/pages/a_la_francaise.html">À la Française</a>
+        <a href="/pages/la_note_enchantee.html">La note enchantée</a>
+        <a href="/pages/la_palette_du_gout.html">La palette du goût</a>
+        <a href="/pages/le_delice_des_sens.html">Le délice des sens</a>
+    </nav>
     <h1>Work in progress ...</h1>
 </body>
 </html>
