--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -9,5 +9,14 @@
 <body>
     <a href="/index.html">retour</a>
     <h1>À la Française</h1>
+    <footer class="footer">
+        <h2 class="footer__titre">ohmyfood</h2>
+        <ul class="footer__list">
+            <li class="footer__list-item"><a href="/">Proposer un restaurant</a></li>
+            <li class="footer__list-item"><a href="/">Devenir partenaire</a></li>
+            <li class="footer__list-item"><a href="/">Mentions légales</a></li>
+            <li class="footer__list-item"><a href="/">Contact</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
