:construction: mobile UI

--- a/index.html
+++ b/index.html
@@ -58,33 +58,85 @@
 		<section class="restaurant">
 			<h2 class="restaurant__titre">Restaurants</h2>
 			<nav class="restaurant__nav">
-				<div>
-					<a href="/pages/a_la_francaise.html">À la Française</a>
-				</div>
-				<div>
-					<a href="/pages/la_note_enchantee.html"
-						>La note enchantée</a
-					>
-				</div>
-				<div>
-					<a href="/pages/la_palette_du_gout.html"
-						>La palette du goût</a
-					>
-				</div>
-				<div>
-					<a href="/pages/le_delice_des_sens.html"
-						>Le délice des sens</a
-					>
-				</div>
+				<a
+					class="restaurant__link"
+					href="/pages/la_palette_du_gout.html"
+				>
+					<figure class="card">
+						<div class="img img--la_palette_du_gout"></div>
+						<figcaption class="card__description">
+							<div>
+								<h4>La palette du goût</h4>
+								<p>Ménilmontant</p>
+							</div>
+							<div class="card__description--icon">
+								<i class="fas fa-heart"></i>
+							</div>
+						</figcaption>
+					</figure>
+				</a>
+
+				<a
+					class="restaurant__link"
+					href="/pages/la_note_enchantee.html"
+				>
+					<figure class="card">
+						<div class="img img--la_note_enchantee"></div>
+						<figcaption class="card__description">
+							<div>
+								<h4>La note enchantée</h4>
+								<p>Charonne</p>
+							</div>
+							<div class="card__description--icon">
+								<i class="fas fa-heart"></i>
+							</div>
+						</figcaption>
+					</figure>
+				</a>
+
+				<a class="restaurant__link" href="/pages/a_la_francaise.html">
+					<figure class="card">
+						<div class="img img--a_la_francaise"></div>
+						<figcaption class="card__description">
+							<div>
+								<h4>À la Française</h4>
+								<p>Cité Rouge</p>
+							</div>
+							<div class="card__description--icon">
+								<i class="fas fa-heart"></i>
+							</div>
+						</figcaption>
+					</figure>
+				</a>
+
+				<a
+					class="restaurant__link"
+					href="/pages/le_delice_des_sens.html"
+				>
+					<figure class="card">
+						<div class="img img--le_delice_des_sens"></div>
+						<figcaption class="card__description">
+							<div>
+								<h4>Le délice des sens</h4>
+								<p>Folie-Méricourt</p>
+							</div>
+							<div class="card__description--icon">
+								<i class="fas fa-heart"></i>
+							</div>
+						</figcaption>
+					</figure>
+				</a>
 			</nav>
 		</section>
 		<footer class="footer">
-			<h2 class="footer__titre">ohmyfood</h2>
+			<h1 class="footer__titre">ohmyfood</h1>
 			<ul class="footer__list">
 				<li class="footer__list-item">
+					<i class="fas fa-utensils"></i>
 					<a href="/">Proposer un restaurant</a>
 				</li>
 				<li class="footer__list-item">
+					<i class="fas fa-hands-helping"></i>
 					<a href="/">Devenir partenaire</a>
 				</li>
 				<li class="footer__list-item">
