--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -1,22 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le délice des sens</title>
-    <link rel="stylesheet" href="styles/css/style.css">
-</head>
-<body>
-    <a href="/index.html">retour</a>
-    <h1>Le délice des sens</h1>
-    <footer class="footer">
-        <h2 class="footer__titre">ohmyfood</h2>
-        <ul class="footer__list">
-            <li class="footer__list-item"><a href="/">Proposer un restaurant</a></li>
-            <li class="footer__list-item"><a href="/">Devenir partenaire</a></li>
-            <li class="footer__list-item"><a href="/">Mentions légales</a></li>
-            <li class="footer__list-item"><a href="/">Contact</a></li>
-        </ul>
-    </footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Le délice des sens</title>
+		<link rel="stylesheet" href="../styles/css/style.css" />
+		<script
+			src="https://kit.fontawesome.com/2c740296bb.js"
+			crossorigin="anonymous"
+		></script>
+	</head>
+	<body>
+		<header class="header">
+			<a class="header__link" href="/index.html">
+				<i class="fas fa-arrow-left"></i>
+			</a>
+			<img
+				class="header__logo"
+				src="./../images/logo/ohmyfood@2x.svg"
+				alt="logo"
+			/>
+		</header>
+		<section class="image_head">
+			<img src="./../images/restaurants/le_delice_des_sens.jpg" alt="" />
+		</section>
+		<section class="menu">
+			<div class="menu__head">
+				<h1>Le délice des sens</h1>
+				<i class="fas fa-heart"></i>
+			</div>
+
+			<div class="menu__section">
+				<h5 class="menu__section--titre">Entrées</h5>
+				<ul class="menu__section--list">
+					<li class="menu__section--list-item">
+						<div class="desc">
+							<h4>Tartare de thon</h4>
+							<p>Assaisonné au yuzu</p>
+						</div>
+						<div>25€</div>
+					</li>
+					<li class="menu__section--list-item">
+						<div class="desc">
+							<h4>Bouchée de homard croustillant</h4>
+							<p>Et sa farandole de petits légumes</p>
+						</div>
+						<div>35€</div>
+					</li>
+					<li class="menu__section--list-item">
+						<div class="desc">
+							<h4>Velouté de cèpes</h4>
+							<p>Aux truffes</p>
+						</div>
+						<div>20€</div>
+					</li>
+				</ul>
+			</div>
+
+			<div class="menu__section">
+				<h5 class="menu__section--titre">Plats</h5>
+				<ul class="menu__section--list">
+					<li class="menu__section--list-item">
+						<div class="desc">
+							<h4>Poulet rôti aux herbes de Provence</h4>
+							<p>Et sa crème de truffe</p>
+						</div>
+						<div>40€</div>
+					</li>
+					<li class="menu__section--list-item">
+						<div class="desc">
+							<h4>Langouste rôtie</h4>
+							<p>Et ses légumes de saison</p>
+						</div>
+						<div>35€</div>
+					</li>
+					<li class="menu__section--list-item">
+						<div class="desc">
+							<h4>Côte de boeuf Angus</h4>
+							<p>Et sa purée de panais</p>
+						</div>
+						<div>44€</div>
+					</li>
+				</ul>
+			</div>
+
+			<div class="menu__section">
+				<h5 class="menu__section--titre">Desserts</h5>
+				<ul class="menu__section--list">
+					<li class="menu__section--list-item">
+						<div class="desc">
+							<h4>Farandole de desserts</h4>
+							<p>Du chef</p>
+						</div>
+						<div>18€</div>
+					</li>
+					<li class="menu__section--list-item">
+						<div class="desc">
+							<h4>Crème brulée</h4>
+							<p>Revisitée</p>
+						</div>
+						<div>22€</div>
+					</li>
+					<li class="menu__section--list-item">
+						<div class="desc">
+							<h4>Tiramisu</h4>
+							<p>À la noisette</p>
+						</div>
+						<div>23€</div>
+					</li>
+				</ul>
+			</div>
+
+			<button class="btn btn--restaurant">Commander</button>
+		</section>
+		<footer class="footer">
+			<h1 class="footer__titre">ohmyfood</h1>
+			<ul class="footer__list">
+				<li class="footer__list-item">
+					<i class="fas fa-utensils"></i>
+					<a href="/">Proposer un restaurant</a>
+				</li>
+				<li class="footer__list-item">
+					<i class="fas fa-hands-helping"></i>
+					<a href="/">Devenir partenaire</a>
+				</li>
+				<li class="footer__list-item">
+					<a href="/">Mentions légales</a>
+				</li>
+				<li class="footer__list-item"><a href="/">Contact</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
