--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<nav class="restaurant__nav">
 				<a
 					class="restaurant__link"
-					href="/pages/la_palette_du_gout.html"
+					href="./pages/la_palette_du_gout.html"
 				>
 					<figure class="card">
 						<div class="img img--la_palette_du_gout"></div>
@@ -78,7 +78,7 @@
 
 				<a
 					class="restaurant__link"
-					href="/pages/la_note_enchantee.html"
+					href="./pages/la_note_enchantee.html"
 				>
 					<figure class="card">
 						<div class="img img--la_note_enchantee"></div>
@@ -94,7 +94,7 @@
 					</figure>
 				</a>
 
-				<a class="restaurant__link" href="/pages/a_la_francaise.html">
+				<a class="restaurant__link" href="./pages/a_la_francaise.html">
 					<figure class="card">
 						<div class="img img--a_la_francaise"></div>
 						<figcaption class="card__description">
@@ -111,7 +111,7 @@
 
 				<a
 					class="restaurant__link"
-					href="/pages/le_delice_des_sens.html"
+					href="./pages/le_delice_des_sens.html"
 				>
 					<figure class="card">
 						<div class="img img--le_delice_des_sens"></div>
@@ -133,16 +133,16 @@
 			<ul class="footer__list">
 				<li class="footer__list-item">
 					<i class="fas fa-utensils"></i>
-					<a href="/">Proposer un restaurant</a>
+					<a href="#">Proposer un restaurant</a>
 				</li>
 				<li class="footer__list-item">
 					<i class="fas fa-hands-helping"></i>
-					<a href="/">Devenir partenaire</a>
+					<a href="#">Devenir partenaire</a>
 				</li>
 				<li class="footer__list-item">
-					<a href="/">Mentions légales</a>
+					<a href="#">Mentions légales</a>
 				</li>
-				<li class="footer__list-item"><a href="/">Contact</a></li>
+				<li class="footer__list-item"><a href="#">Contact</a></li>
 			</ul>
 		</footer>
 	</body>
