--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>La note enchantée</title>
-		<link rel="stylesheet" href="../styles/css/style.css" />
+		<link rel="stylesheet" href="/styles/css/style.css" />
 		<script
 			src="https://kit.fontawesome.com/2c740296bb.js"
 			crossorigin="anonymous"
