--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Le délice des sens</title>
-		<link rel="stylesheet" href="../styles/css/style.css" />
+		<link rel="stylesheet" href="/styles/css/style.css" />
 		<script
 			src="https://kit.fontawesome.com/2c740296bb.js"
 			crossorigin="anonymous"
@@ -17,12 +17,12 @@
 			</a>
 			<img
 				class="header__logo"
-				src="./../images/logo/ohmyfood@2x.svg"
+				src="/images/logo/ohmyfood@2x.svg"
 				alt="logo"
 			/>
 		</header>
 		<section class="image_head">
-			<img src="./../images/restaurants/le_delice_des_sens.jpg" alt="" />
+			<img src="/images/restaurants/le_delice_des_sens.jpg" alt="" />
 		</section>
 		<section class="menu">
 			<div class="menu__head">
