change var name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header class="header">
 			<img
 				class="header__logo"
-				src="./images/logo/ohmyfood@2x.svg"
+				src="/images/logo/ohmyfood@2x.svg"
 				alt="logo"
 			/>
 		</header>
