--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Ohmyfood</title>
-		<link rel="stylesheet" href="styles/css/style.css" />
+		<link rel="stylesheet" href="/styles/css/style.css" />
+		<base href="https://rlaunay.github.io/RemiLaunay_3_04112020/" />
 		<script
 			src="https://kit.fontawesome.com/2c740296bb.js"
 			crossorigin="anonymous"
