--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<base href="/RemiLaunay_3_04112020/" />
 		<title>Ohmyfood</title>
-		<link rel="stylesheet" href="/styles/css/style.css" />
-		<base href="https://rlaunay.github.io/RemiLaunay_3_04112020/" />
+		<link rel="stylesheet" href="styles/css/style.css" />
 		<script
 			src="https://kit.fontawesome.com/2c740296bb.js"
 			crossorigin="anonymous"
