--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		></script>
 	</head>
 	<body>
+		<div class="backdrop">
+			<span class="loader"><span></span></span>
+		</div>
 		<header class="header">
 			<img
 				class="header__logo"
@@ -59,71 +62,81 @@
 		<section class="restaurant">
 			<h2 class="restaurant__titre">Restaurants</h2>
 			<nav class="restaurant__nav">
-				<a
-					class="restaurant__link"
-					href="pages/la_palette_du_gout.html"
-				>
-					<figure class="card">
+				<figure class="card">
+					<a
+						class="restaurant__link"
+						href="pages/la_palette_du_gout.html"
+					>
 						<div class="img img--la_palette_du_gout"></div>
-						<figcaption class="card__description">
-							<div>
-								<h4>La palette du goût</h4>
-								<p>Ménilmontant</p>
-							</div>
-							<div class="card__description--icon">
-								<i class="fas fa-heart"></i>
-							</div>
-						</figcaption>
-					</figure>
-				</a>
+					</a>
+					<figcaption class="card__description">
+						<div>
+							<h4>La palette du goût</h4>
+							<p>Ménilmontant</p>
+						</div>
+						<div class="card__description--icon">
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart background"></i>
+						</div>
+					</figcaption>
+				</figure>
 
-				<a class="restaurant__link" href="pages/la_note_enchantee.html">
-					<figure class="card">
+				<figure class="card">
+					<a
+						class="restaurant__link"
+						href="pages/la_note_enchantee.html"
+					>
 						<div class="img img--la_note_enchantee"></div>
-						<figcaption class="card__description">
-							<div>
-								<h4>La note enchantée</h4>
-								<p>Charonne</p>
-							</div>
-							<div class="card__description--icon">
-								<i class="fas fa-heart"></i>
-							</div>
-						</figcaption>
-					</figure>
-				</a>
+					</a>
+					<figcaption class="card__description">
+						<div>
+							<h4>La note enchantée</h4>
+							<p>Charonne</p>
+						</div>
+						<div class="card__description--icon">
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart background"></i>
+						</div>
+					</figcaption>
+				</figure>
 
-				<a class="restaurant__link" href="pages/a_la_francaise.html">
-					<figure class="card">
-						<div class="img img--a_la_francaise"></div>
-						<figcaption class="card__description">
-							<div>
-								<h4>À la Française</h4>
-								<p>Cité Rouge</p>
-							</div>
-							<div class="card__description--icon">
-								<i class="fas fa-heart"></i>
-							</div>
-						</figcaption>
-					</figure>
-				</a>
+				<figure class="card">
+					<a
+						class="restaurant__link"
+						href="pages/a_la_francaise.html"
+					>
+						<div class="img img--a_la_francaise"></div
+					></a>
+					<figcaption class="card__description">
+						<div>
+							<h4>À la Française</h4>
+							<p>Cité Rouge</p>
+						</div>
+						<div class="card__description--icon">
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart background"></i>
+						</div>
+					</figcaption>
+				</figure>
 
-				<a
-					class="restaurant__link"
-					href="pages/le_delice_des_sens.html"
-				>
-					<figure class="card">
-						<div class="img img--le_delice_des_sens"></div>
-						<figcaption class="card__description">
-							<div>
-								<h4>Le délice des sens</h4>
-								<p>Folie-Méricourt</p>
-							</div>
-							<div class="card__description--icon">
-								<i class="fas fa-heart"></i>
-							</div>
-						</figcaption>
-					</figure>
-				</a>
+				<figure class="card">
+					<a
+						class="restaurant__link"
+						href="pages/le_delice_des_sens.html"
+					>
+						<div class="img img--le_delice_des_sens"></div
+					></a>
+					<figcaption class="card__description">
+						<div>
+							<h4>Le délice des sens</h4>
+							<p>Folie-Méricourt</p>
+						</div>
+						<div class="card__description--icon">
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart background"></i>
+						</div>
+					</figcaption>
+				</figure>
 			</nav>
 		</section>
 		<footer class="footer">
