--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -27,7 +27,7 @@
 		<section class="menu">
 			<div class="menu__head">
 				<h1>La note enchantée</h1>
-				<i class="fas fa-heart"></i>
+				<i class="far fa-heart"></i>
 			</div>
 
 			<div class="menu__section">
@@ -38,28 +38,40 @@
 							<h4>Ravioles de foie gras</h4>
 							<p>Accompagnés de leur crème à la truffe</p>
 						</div>
-						<div>25€</div>
+						<div class="price">25€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Caviar osciètre</h4>
 							<p>Sur blini à la farine de blé noir</p>
 						</div>
-						<div>35€</div>
+						<div class="price">35€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Homard et espuma de potiron</h4>
 							<p>Mariné aux zestes d'orange</p>
 						</div>
-						<div>20€</div>
+						<div class="price">20€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Foie gras de canard cuit entier</h4>
 							<p>Confiture de figue et pain toasté</p>
 						</div>
-						<div>35€</div>
+						<div class="price">35€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -72,21 +84,30 @@
 							<h4>Noix de coquilles Saint-Jacques</h4>
 							<p>Sur lit de purée de céleri-rave</p>
 						</div>
-						<div>40€</div>
+						<div class="price">40€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Langoustine poêlée</h4>
 							<p>Purée de patate douce</p>
 						</div>
-						<div>35€</div>
+						<div class="price">35€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Mijoté de queue de boeuf</h4>
 							<p>Et riz sauvage aux zestes de citron</p>
 						</div>
-						<div>44€</div>
+						<div class="price">44€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -99,21 +120,30 @@
 							<h4>Macaron noisette et chocolat</h4>
 							<p>Glace au caramel brun et sel de Guérande</p>
 						</div>
-						<div>18€</div>
+						<div class="price">18€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Baba au rhum revisité</h4>
 							<p>Avec son coulis de citron</p>
 						</div>
-						<div>22€</div>
+						<div class="price">22€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Tarte au citron meringuée</h4>
 							<p>Déstructurée</p>
 						</div>
-						<div>23€</div>
+						<div class="price">23€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
