--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -27,7 +27,7 @@
 		<section class="menu">
 			<div class="menu__head">
 				<h1>La note enchantée</h1>
-				<i class="fas fa-heart"></i>
+				<i class="far fa-heart"></i>
 			</div>
 
 			<div class="menu__section">
@@ -38,21 +38,30 @@
 							<h4>Tartare de poulpe acidulé</h4>
 							<p>Aux zestes d'orange</p>
 						</div>
-						<div>25€</div>
+						<div class="price">25€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Velouté de légumes d'antan</h4>
 							<p>Carotte, panais, topinambour</p>
 						</div>
-						<div>35€</div>
+						<div class="price">35€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Soupe à l'oignon</h4>
 							<p>Revisitée</p>
 						</div>
-						<div>20€</div>
+						<div class="price">20€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -65,21 +74,30 @@
 							<h4>Noix de coquilles Saint-Jacques</h4>
 							<p>Accompagnées d'une purée de panais</p>
 						</div>
-						<div>40€</div>
+						<div class="price">40€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Magret de canard</h4>
 							<p>Et parmentier de pommes de terre</p>
 						</div>
-						<div>35€</div>
+						<div class="price">35€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Pigeonneau d’Ille-et-Vilaine</h4>
 							<p>Sur son lit de gnocchis aux légumes</p>
 						</div>
-						<div>44€</div>
+						<div class="price">44€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -92,21 +110,30 @@
 							<h4>Pétales de violettes glacés</h4>
 							<p>Et purée de noisettes</p>
 						</div>
-						<div>18€</div>
+						<div class="price">18€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Fondant au chocolat</h4>
 							<p>Revisité</p>
 						</div>
-						<div>22€</div>
+						<div class="price">22€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Millefeuille croustillant</h4>
 							<p>Myrtilles et pâte d’amande</p>
 						</div>
-						<div>23€</div>
+						<div class="price">23€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
