--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -27,7 +27,7 @@
 		<section class="menu">
 			<div class="menu__head">
 				<h1>La palette du goût</h1>
-				<i class="fas fa-heart"></i>
+				<i class="far fa-heart"></i>
 			</div>
 
 			<div class="menu__section">
@@ -38,21 +38,30 @@
 							<h4>Fricassée d'escargot</h4>
 							<p>Au piment d'espelette</p>
 						</div>
-						<div>25€</div>
+						<div class="price">25€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Foie gras de canard mi-cuit</h4>
 							<p>Et ses copeaux de truffe noire</p>
 						</div>
-						<div>35€</div>
+						<div class="price">35€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Oeuf au plat</h4>
 							<p>Assaisonné à la truffe sur lit de caviar</p>
 						</div>
-						<div>20€</div>
+						<div class="price">20€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -65,21 +74,30 @@
 							<h4>Filet de boeuf aux herbes</h4>
 							<p>Accompagné de sa ribambelle de légumes</p>
 						</div>
-						<div>40€</div>
+						<div class="price">40€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Parmentier de queue de boeuf</h4>
 							<p>À la truffe noire sur sa purée de panais</p>
 						</div>
-						<div>35€</div>
+						<div class="price">35€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Filet de turbot</h4>
 							<p>Aux agrumes</p>
 						</div>
-						<div>44€</div>
+						<div class="price">44€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -92,21 +110,30 @@
 							<h4>Paris-Brest</h4>
 							<p>Revisité</p>
 						</div>
-						<div>18€</div>
+						<div class="price">18€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Macaron au chocolat d'exception</h4>
 							<p>Et glace à la vanille de Madagascar</p>
 						</div>
-						<div>22€</div>
+						<div class="price">22€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Mousse au chocolat</h4>
 							<p>Au piment d'Espelette et à la truffe noire</p>
 						</div>
-						<div>23€</div>
+						<div class="price">23€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
