--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -27,7 +27,7 @@
 		<section class="menu">
 			<div class="menu__head">
 				<h1>Le délice des sens</h1>
-				<i class="fas fa-heart"></i>
+				<i class="far fa-heart"></i>
 			</div>
 
 			<div class="menu__section">
@@ -38,21 +38,30 @@
 							<h4>Tartare de thon</h4>
 							<p>Assaisonné au yuzu</p>
 						</div>
-						<div>25€</div>
+						<div class="price">25€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Bouchée de homard croustillant</h4>
 							<p>Et sa farandole de petits légumes</p>
 						</div>
-						<div>35€</div>
+						<div class="price">35€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Velouté de cèpes</h4>
 							<p>Aux truffes</p>
 						</div>
-						<div>20€</div>
+						<div class="price">20€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -65,21 +74,30 @@
 							<h4>Poulet rôti aux herbes de Provence</h4>
 							<p>Et sa crème de truffe</p>
 						</div>
-						<div>40€</div>
+						<div class="price">40€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Langouste rôtie</h4>
 							<p>Et ses légumes de saison</p>
 						</div>
-						<div>35€</div>
+						<div class="price">35€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Côte de boeuf Angus</h4>
 							<p>Et sa purée de panais</p>
 						</div>
-						<div>44€</div>
+						<div class="price">44€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -92,21 +110,30 @@
 							<h4>Farandole de desserts</h4>
 							<p>Du chef</p>
 						</div>
-						<div>18€</div>
+						<div class="price">18€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Crème brulée</h4>
 							<p>Revisitée</p>
 						</div>
-						<div>22€</div>
+						<div class="price">22€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 					<li class="menu__section--list-item">
 						<div class="desc">
 							<h4>Tiramisu</h4>
 							<p>À la noisette</p>
 						</div>
-						<div>23€</div>
+						<div class="price">23€</div>
+						<div class="selected-item">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</li>
 				</ul>
 			</div>
