change loader / add new / hover step

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- <base href="/RemiLaunay_3_04112020/" /> -->
 		<title>Ohmyfood</title>
 		<link rel="stylesheet" href="styles/css/style.css" />
 		<script
@@ -62,7 +61,7 @@
 		<section class="restaurant">
 			<h2 class="restaurant__titre">Restaurants</h2>
 			<nav class="restaurant__nav">
-				<figure class="card">
+				<figure class="card new">
 					<a
 						class="restaurant__link"
 						href="pages/la_palette_du_gout.html"
@@ -81,7 +80,7 @@
 					</figcaption>
 				</figure>
 
-				<figure class="card">
+				<figure class="card new">
 					<a
 						class="restaurant__link"
 						href="pages/la_note_enchantee.html"
