--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<span>
 				<i class="fas fa-map-marker-alt"></i>
 			</span>
-			<p>Paris, Belleville</p>
+			<h6>Paris, Belleville</h6>
 		</section>
 		<section class="explorer">
 			<h2>Réservez le menu qui vous convient</h2>
